# employee_attrition

./: README.docx  README.md  pyproject.toml  requirements.txt
Tableau/: Tableau_Link.txt
config/: settings.yaml
data/clean/: employee_attrition.csv  employee_attrition_chi_squared_results.csv
notebooks/: clean_data.ipynb  yaml.ipynb
src/employee_attrition/: __init__.py
