[project]
name = "employee-attrition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "plotly>=5.24.1",
    "bokeh>=3.4.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
    "lightgbm>=4.5.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "scrapy>=2.11.2",
    "sqlalchemy>=2.0.35",
    "pymysql>=1.1.1",
    "pip>=24.2",
    "datetime>=5.5",
    "tqdm>=4.66.5",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
